# docu-meter-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260514_1838_add_users_and_org_memberships.py
apps/api/app/: main.py
apps/api/app/api_keys/: models.py  routes.py  schemas.py  service.py
apps/api/app/auth/: dependencies.py
apps/api/app/core/: config.py  database.py  redis.py  security.py
apps/api/app/documents/: extractors.py  service.py
apps/api/app/llm/: prompts.py  schemas.py  service.py
apps/api/app/organizations/: models.py  routes.py  schemas.py
apps/api/app/projects/: models.py  routes.py  schemas.py
apps/api/app/protected_api/: dependencies.py  routes.py  schemas.py
apps/api/app/quotas/: service.py
apps/api/app/rate_limits/: dependencies.py  service.py
apps/api/app/usage/: models.py  routes.py  schemas.py  service.py
apps/api/app/users/: models.py  routes.py  schemas.py  service.py
apps/api/tests/: conftest.py  test_admin_api_keys.py  test_admin_usage.py  test_document_service.py  test_internal_sync_user.py  test_metering_flow.py  test_rate_limits.py  test_usage_ingestion.py  test_usage_service.py
apps/api/tests/integration/: test_openai_fulfillment.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/: api-client.ts  (+1 more)
docs/: LAUNCH_KIT.md  ROADMAP_ISSUES.md
(+7 files in other folders)
